@@ -29,7 +29,7 @@ import (
 
 var (
 	// used in the unit tests
-	lsbReleasePath = "/etc/lsb-release"
+	lsbReleasePath = "/etc/os-release"
 )
 
 // Release contains a structure with the release information
@@ -82,28 +82,31 @@ type Lsb struct {
 	Codename string
 }
 
-// ReadLsb returns the lsb-release information of the current system
+// ReadLsb returns the os-release information of the current system.
 func ReadLsb() (*Lsb, error) {
 	lsb := &Lsb{}
 
 	content, err := ioutil.ReadFile(lsbReleasePath)
 	if err != nil {
-		return nil, fmt.Errorf("cannot read lsb-release: %s", err)
+		return nil, fmt.Errorf("cannot read os-release: %s", err)
 	}
 
 	for _, line := range strings.Split(string(content), "\n") {
-		if strings.HasPrefix(line, "DISTRIB_ID=") {
+		if strings.HasPrefix(line, "NAME=") {
 			tmp := strings.SplitN(line, "=", 2)
-			lsb.ID = tmp[1]
+			lsb.ID = strings.Trim(tmp[1],"\"")
 		}
-		if strings.HasPrefix(line, "DISTRIB_RELEASE=") {
+		if strings.HasPrefix(line, "VERSION_ID=") {
 			tmp := strings.SplitN(line, "=", 2)
-			lsb.Release = tmp[1]
+			lsb.Release = strings.Trim(tmp[1],"\"")
 		}
-		if strings.HasPrefix(line, "DISTRIB_CODENAME=") {
+		if strings.HasPrefix(line, "UBUNTU_CODENAME=") {
 			tmp := strings.SplitN(line, "=", 2)
-			lsb.Codename = tmp[1]
+			lsb.Codename = strings.Trim(tmp[1],"\"")
 		}
+	}
+	if (lsb.Codename == "") {
+		lsb.Codename = "xenial"
 	}
 
 	return lsb, nil
